fixed some typo

--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
                     </div>
                     <div class="d-flex align-items-end justify-content-between">
                         <a href="#Achievements" class="btn btn-block border-right">Achievements</a>
-                        <a href="#Publications" class="btn btn-block border-right">Publications</a>
+                        <a href="#Publications" class="btn">Publications</a>
                         
                     </div>
                     <div class="d-flex align-items-end justify-content-between">
                         <a href="https://drive.google.com/file/d/1z0qj5RrcCRCskkEubV7g3sfhRPV0teVK/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="btn btn-block border-right"> Resume </a>
                         <a href="#projects"class="btn btn-block border-right"> Portfolio </a>
-                        <a href="#Leadership" class="btn btn-block border-right"> Leadership</a>
+                        <a href="#Leadership" class="btn "> Leadership</a>
                         <!--a href="#contact" class="btn btn-block btn-scroll">Leadership</a-->
                     </div>
                 </div>
@@ -69,7 +69,7 @@
                         </div>
                         <div class="col-12">
                                 <p>I'm an early researcher at the intersection of engineering and medicine, driven by a lifelong passion for learning,
-                                    in my final year of BSc. Biomedical Engineering student at <a href="https://www.ku.ac.ke/" target="_blank" rel="noopener noreferrer"> Kenyatta University, </a> Nairobi, Kenya. 
+                                    in my final year of BSc. in Biomedical Engineering at <a href="https://www.ku.ac.ke/" target="_blank" rel="noopener noreferrer"> Kenyatta University, </a> Nairobi, Kenya. 
                                  </p> 
 
                                 <p> I'm excited about the promising prospects of computational, statistical, and data-driven approaches in aiding healthcare challenges. Therefore,
@@ -103,8 +103,7 @@
                                     <p class="mb-2"><a href="https://marconilab.org/" target="_blank" rel="noopener noreferrer"> Marconi Research and Innovations Lab, Uganda</a> | <small> January 2023 -  March 2023</small></p>
                                     <p>  <a href="https://huggingface.co/AntonyG/fine-tune-wav2vec2-large-xls-r-1b-sw" target="_blank" rel="noopener noreferrer"> Developed a Swahili speech recognition model </a> as preliminary steps towards building a more reliable, robust and autonomous patient-doctor documentation tool with the mentorship of <a href="https://www.linkedin.com/in/andrew-katumba-a6087050/" target="_blank" rel="noopener noreferrer"> Dr. Andrew</a>. 
                                         <br><br>Additionally, prepared and participated in a <a href="https://www.linkedin.com/posts/antony-m-gitau_precisionmedicine-breast-cancer-activity-7041451781289054208-n89-?utm_source=share&utm_medium=member_desktop" target="_blank" rel="noopener noreferrer">  breast cancer hackathon challenge </a> at the University of Texas
-                                        Southwestern with the mentorship of <a href="https://www.linkedin.com/in/jan-mikelson/" target="_blank" rel="noopener noreferrer"> Dr. Jan</a>.
-                                    </p>
+                                        Southwestern with the mentorship of <a href="https://www.linkedin.com/in/jan-mikelson/" target="_blank" rel="noopener noreferrer"> Dr. Jan</a> and published a <a href="https://www.frontiersin.org/articles/10.3389/frai.2023.1260361/full" target="_blank" rel="noopener noreferrer">  position paper </a> on our implementation. 
                                         <!--a href="#some of my projects">More here.</a-->
                                 </div>
                                 <div class="position-relative mb-4">
@@ -183,7 +182,7 @@
                     <div class="position-relative mb-4">
                         <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                         <h5 class="font-weight-bold mb-1"> <a href="https://deeplearningindaba.com/2023/"target="_blank" rel="noopener noreferrer"> Deep Learning Indaba 2023 </a></h5>
-                        <p class="mb-2"><strong>Accra, Ghana</strong> | <small> June 2023</small></p>
+                        <p class="mb-2"><strong>Accra, Ghana</strong> | <small> September 2023</small></p>
                         Won a partial scholarship to participate in the deep learning indaba 2023. Documented my learning and activities on 
                          <a href="https://github.com/Antony-gitau/indaba_2023_documentation"target="_blank" rel="noopener noreferrer">GitHub, </a> including presenting at TrustAI workshop, facilitating practical sessions, and presenting a poster.
                          <!--I also shared the experience on
@@ -291,7 +290,7 @@
 
             <!--Competitions-->
             <div class="col-12">
-                <h5 class="title position-relative pb-2 mb-4">3. Hacking Contests</h5>
+                <h5 class="title position-relative pb-2 mb-4">3. Hack Contests</h5>
                 <div class="border-left border-primary pt-2 pl-4 ml-2">
                     <div class="position-relative mb-4">
                         <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
