fixed research part and about

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <a href="https://drive.google.com/file/d/1z0qj5RrcCRCskkEubV7g3sfhRPV0teVK/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="btn btn-block border-right"> Resume </a>
                         <a href="#projects"class="btn btn-block border-right"> Portfolio </a>
                         <a href="#Leadership" class="btn "> Leadership</a>
-                        <a href="#contact" class="btn btn-block btn-scroll">Leadership</a>
+                        <!--a href="#contact" class="btn btn-block btn-scroll">Leadership</a-->
                     </div>
                 </div>
                 <div class="sidebar-icon d-flex flex-column h-100 justify-content-center text-right">
