added DSA fellowship

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                             <h2 class="title position-relative pb-2 mb-4">About Me</h2>
                         </div>
                         <div class="col-12">
-                                <p>I'm a final year BSc. Biomedical Engineering student at <a href="https://www.ku.ac.ke/" target="_blank" rel="noopener noreferrer"> Kenyatta University, </a> Nairobi, Kenya. 
+                                <p>I'm a visiting Data Science Africa Research Fellow hosted at the Centre for Data Science and Artificial Intelligence.
+                                    I completed a BSc. Biomedical Engineering student at <a href="https://www.ku.ac.ke/" target="_blank" rel="noopener noreferrer"> Kenyatta University, </a> Nairobi, Kenya (Graduating 2024). 
                                  </p> 
 
                                 <p> During my undergraduate, I have been fortunate to work as a research assistant under the guidance of <a href="https://www.linkedin.com/in/ciira-maina-b0b10a26/" target="_blank" rel="noopener noreferrer"> Professor Ciira Maina</a> at 
