updating experience and about

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                         <div class="col-12">
                             <h2 class="title position-relative pb-2 mb-4">About Me</h2>
                         </div>
-                        <div class="col-12">
-                                <p>I'm a visiting Data Science Africa Research Fellow hosted at the Centre for Data Science and Artificial Intelligence.
-                                    I completed a BSc. Biomedical Engineering student at <a href="https://www.ku.ac.ke/" target="_blank" rel="noopener noreferrer"> Kenyatta University, </a> Nairobi, Kenya (Graduating 2024). 
+                        <div class="col-12"> 
+                                <p>I'm a visiting <a href="https://www.linkedin.com/posts/data-science-africa-dsa_datascienceafrica-activity-7173199767055896577-2v9m?utm_source=share&utm_medium=member_desktop" target="_blank" rel="noopener noreferrer"> Data Science Africa Research Fellow, </a> hosted at the Centre for Data Science and Artificial Intelligence.
+                                    I completed a BSc. Biomedical Engineering at <a href="https://www.ku.ac.ke/" target="_blank" rel="noopener noreferrer"> Kenyatta University, </a> Nairobi, Kenya (Graduating July 2024). 
                                  </p> 
 
                                 <p> During my undergraduate, I have been fortunate to work as a research assistant under the guidance of <a href="https://www.linkedin.com/in/ciira-maina-b0b10a26/" target="_blank" rel="noopener noreferrer"> Professor Ciira Maina</a> at 
@@ -103,6 +103,12 @@
                         </div>
                         <div class="col-12">
                             <div class="border-left border-primary pt-2 pl-4 ml-2">
+                                <div class="position-relative mb-4">
+                                    <i class="fa fa-arrow-right text-primary position-absolute" style="top: 3px; left: -24px;"></i>
+                                    <h5 class="mb-1"> Visiting Research Fellow</h5>
+                                    <p class="mb-2"><a href="https://www.datascienceafrica.org/visiting-fellowship/" target="_blank" rel="noopener noreferrer"> Data Science Africa</a> | <small> February 2024 -  present</small></p>
+                                    <p> Working on developing computer vision based approaches web application for monitoring orthopedic patients.
+                                </div>
                                 <div class="position-relative mb-4">
                                     <i class="fa fa-arrow-right text-primary position-absolute" style="top: 3px; left: -24px;"></i>
                                     <h5 class="mb-1"> Visiting Undergraduate Research Assistant</h5>
