--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                      <div class="position-relative mb-4">
                         <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                         <h5 class="font-weight-bold mb-1"> <a href="https://cvpr.thecvf.com/Conferences/2025"target="_blank" rel="noopener noreferrer"> CVPR 2025, Music Center, Nashville, June 2025</a> </h5>
-                        <p class="mb-2"><strong>Nashville, USA</strong> | <small> DSAIL-Orthopedia was accepted for CVPR 2025<a href="https://github.com/DeKUT-DSAIL/dsail-orthopedia-cvpr-2025-demo"target="_blank" rel="noopener noreferrer"> Demo! </a> Awarded the <a href="https://cvpr.thecvf.com/Conferences/2025/BroadeningParticipation"target="_blank" rel="noopener noreferrer"> BP scholarship. </a></small></p> 
+                        <p class="mb-2"><strong>Inperson, Nashville, USA</strong> | <small> DSAIL-Orthopedia was accepted for CVPR 2025<a href="https://github.com/DeKUT-DSAIL/dsail-orthopedia-cvpr-2025-demo"target="_blank" rel="noopener noreferrer"> Demo! </a> Awarded the <a href="https://cvpr.thecvf.com/Conferences/2025/BroadeningParticipation"target="_blank" rel="noopener noreferrer"> BP scholarship. </a></small></p> 
                             
                     </div>
                     <div class="position-relative mb-4">
@@ -566,7 +566,7 @@
                         <div class="d-flex justify-content-center mb-3">
                             <a class="text-white" href="#About"> About Me</a>
                             <span class="px-3">|</span>
-                            <a class="text-white" href="#Experiences"> Experiences</a>
+                            <a class="text-white" href="#projects"> Reseach</a>
                             <span class="px-3">|</span>
                             <a class="text-white" href="#News">News</a>
                         </div>
